// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CS-JWT-03 extended edge cases > CS-JWT-03-80 golden snapshot verify-computed-algorithms-none.ts 1`] = `
[
  {
    "column": 9,
    "file": "verify-computed-algorithms-none.ts",
    "helpUrl": "https://github.com/01laky/CipherSins/blob/main/docs/rules/CS-JWT-03.md",
    "line": 6,
    "message": "jwt.verify() or jwt.sign() allows the "none" algorithm; remove "none" from algorithms / do not use algorithm: "none".",
    "ruleId": "CS-JWT-03",
    "severity": "critical",
    "snippet": "	return jwt.verify(token, secret, { ["algorithms"]: ["none"] });",
  },
]
`;

exports[`CS-JWT-03 extended edge cases > CS-JWT-03-87 golden snapshot decode-and-verify-none.ts 1`] = `
[
  {
    "column": 19,
    "file": "decode-and-verify-none.ts",
    "helpUrl": "https://github.com/01laky/CipherSins/blob/main/docs/rules/CS-JWT-03.md",
    "line": 7,
    "message": "jwt.verify() or jwt.sign() allows the "none" algorithm; remove "none" from algorithms / do not use algorithm: "none".",
    "ruleId": "CS-JWT-03",
    "severity": "critical",
    "snippet": "	const verified = jwt.verify(token, secret, { algorithms: ["none"] });",
  },
]
`;

exports[`CS-JWT-03 metadata and snapshots > CS-JWT-03-52 golden snapshot verify-algorithms-none-literal.ts 1`] = `
[
  {
    "column": 9,
    "file": "verify-algorithms-none-literal.ts",
    "helpUrl": "https://github.com/01laky/CipherSins/blob/main/docs/rules/CS-JWT-03.md",
    "line": 6,
    "message": "jwt.verify() or jwt.sign() allows the "none" algorithm; remove "none" from algorithms / do not use algorithm: "none".",
    "ruleId": "CS-JWT-03",
    "severity": "critical",
    "snippet": "	return jwt.verify(token, secret, { algorithms: ["none"] });",
  },
]
`;

exports[`CS-JWT-03 metadata and snapshots > CS-JWT-03-53 golden snapshot sign-algorithm-none.ts 1`] = `
[
  {
    "column": 9,
    "file": "sign-algorithm-none.ts",
    "helpUrl": "https://github.com/01laky/CipherSins/blob/main/docs/rules/CS-JWT-03.md",
    "line": 6,
    "message": "jwt.verify() or jwt.sign() allows the "none" algorithm; remove "none" from algorithms / do not use algorithm: "none".",
    "ruleId": "CS-JWT-03",
    "severity": "critical",
    "snippet": "	return jwt.sign(payload, secret, { algorithm: "none" });",
  },
]
`;
